tests/should-fail/syntax/no-call.j
function foo takes nothing returns nothing
    return
    foo()
    call foo()
endfunction
